# sushy

./: .coveragerc  .gitignore  .gitreview  .pre-commit-config.yaml  .stestr.conf  CONTRIBUTING.rst  HACKING.rst  README.rst  bindep.txt  lower-constraints.txt  pyproject.toml  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
doc/: requirements.txt
doc/source/: conf.py  contributing.rst  index.rst  installation.rst  readme.rst  usage.rst
doc/source/contributor/: index.rst
doc/source/install/: index.rst
doc/source/reference/: index.rst  usage.rst
playbooks/legacy/sushy-tempest-dsvm-ironic-ipa-partition-redfish-src/: run.yaml
releasenotes/notes/: HttpBootUri-to-settings-6fcbdeed2b4e84df.yaml  accept-encoding-4646ea43998f80bd.yaml  action-parameter-missing-7d234b96b5b1d81a.yaml  add-apply-time-support-to-bios-315ebad429dcab3d.yaml  add-bios-bf69ac56c4ae8f50.yaml  add-bios-update-status-cc59816c374b78e4.yaml  add-chassis-linkage-d8e567f9c791169d.yaml  add-chassis-support-5b97daffe1c61a2b.yaml  add-custom-connector-support-0a49c6649d5f7eaf.yaml  add-default-identity-10c5dd23bed0e915.yaml  add-drive-led-97b687013fec88c9.yaml  add-drive-revision-a0c069fff236479d.yaml  add-drive-volumes-971d80644c3bd1e0.yaml  add-endpoint-subresource-to-fabric-b03e5fd99ece1bf4.yaml  add-fabric-support-1520f7fcb0e12539.yaml  add-http-boot-uri-support-5c25816e13ccdb27.yaml  add-initial-redfish-oem-extension-support-50c9849bb7b6b25c.yaml  add-lldp-receive-fields-enhancement-f1e3d4a5b2c6d789.yaml  add-mapped-list-field-04c671f7a73d83f6.yaml  add-network-adapter-26d01d8d9fb1d7ad.yaml  add-network-device-function-and-port-e880d8f461e3723d.yaml  add-odata-version-header-96dc8179c0e2e9bd.yaml  add-partial-key-match-27bed73d577b1187.yaml  add-pcie-device-support-ac29c597476544ad.yaml  add-pcie-function-support-8cf8d6974c741986.yaml  add-port-e57ec6759ee70bf7.yaml  add-power-resource-e141ddf298673305.yaml  add-processor-id-and-status-b81d4c6e6c14c25f.yaml  add-raid-type-properties-2090da5bea37c660.yaml  add-read-and-connect-timeout-9f7dc3ed63c192c8.yaml  add-response-cb-65d448ee2690d0b2.yaml  add-simple-storage-915464811737bb05.yaml  add-storage-and-simple-storage-attributes-to-system-16e81f9b15b1897d.yaml  add-storage-da766d3dbf9fb385.yaml  add-sushy-root-to-resources-1f221794557aa5fc.yaml  add-system-bootprogress-42ee452cfa279c63.yaml  add-system-manager-linkage-86be69c9df4cb359.yaml  add-system-status-field-41b3f2a8c4b85f38.yaml  add-system-type-mapping-bf456c5c15a90877.yaml  add-task-monitor-support-21f711927ad6ec91.yaml  (+111 more)
releasenotes/source/: 2023.1.rst  2023.2.rst  2024.1.rst  conf.py  index.rst  pike.rst  queens.rst  rocky.rst  stein.rst  train.rst  ussuri.rst  victoria.rst  wallaby.rst  xena.rst  yoga.rst  zed.rst
sushy/: __init__.py  auth.py  connector.py  exceptions.py  main.py  taskmonitor.py  utils.py
sushy/oem/dell/: __init__.py  asynchronous.py  constants.py  utils.py
sushy/resources/: base.py  common.py  constants.py  ipaddresses.py  mappings.py  settings.py  task_monitor.py
sushy/resources/certificateservice/: certificate.py  certificateservice.py  constants.py
sushy/resources/chassis/: chassis.py  constants.py  mappings.py
sushy/resources/compositionservice/: compositionservice.py  constants.py  mappings.py  resourceblock.py  resourcezone.py
sushy/resources/eventservice/: constants.py  eventdestination.py  eventservice.py  mappings.py
sushy/resources/fabric/: constants.py  endpoint.py  fabric.py  mappings.py
sushy/resources/manager/: constants.py  manager.py  mappings.py  virtual_media.py
sushy/resources/oem/: __init__.py  base.py  common.py  fake.py
sushy/resources/registry/: attribute_registry.py  constants.py  message_registry.py  message_registry_file.py  messageregistry.py
sushy/resources/sessionservice/: session.py  sessionservice.py
sushy/resources/system/: bios.py  constants.py  ethernet_interface.py  mappings.py  pcie_device.py  port.py  processor.py  secure_boot.py  secure_boot_database.py  simple_storage.py  system.py
sushy/resources/taskservice/: constants.py  mappings.py  task.py  taskmonitor.py  taskservice.py
sushy/resources/updateservice/: constants.py  mappings.py  softwareinventory.py  updateservice.py
sushy/standard_registries/: Base.1.0.0.json  Base.1.2.0.json  Base.1.3.0.json  Base.1.3.1.json  Base.1.4.0.json
sushy/tests/unit/: base.py  test_auth.py  test_connector.py  test_main.py  test_taskmonitor.py  test_utils.py
tools/: generate-enum.py  mockup_server.py  tox_install.sh
tools/mockup_server_libvirt/: mockup_server_libvirt.py  requirements.txt
tools/mockup_server_libvirt/templates/: root.json  system.json  system_collection.json
zuul.d/: legacy-sushy-jobs.yaml  project.yaml  sushy-jobs.yaml
(+224 files in other folders)
