[build-system]
requires = ["pbr>=6.0.0", "setuptools>=64.0.0"]
build-backend = "pbr.build"

[tool.doc8]
ignore = ["D001"]

[tool.ruff]
line-length = 79
target-version = "py37"

[tool.ruff.lint]
select = [
    "E",        # pycodestyle (error)
    "F",        # pyflakes
    "G",        # flake8-logging-format
    "LOG",      # flake8-logging
    "S",        # flake8-bandit
    "UP",       # pyupgrade
]

[tool.ruff.lint.per-file-ignores]
"sushy/tests/**/*.py" = [
    "S104",     # disable 'hardcoded_bind_all_interfaces' for tests
    "S105",     # disable 'hardcoded_password_string' for tests
    "S106",     # disable 'hardcoded_password_funcarg' for tests
]
