[metadata]
name = sushy
summary = Sushy is a small Python library to communicate with Redfish based systems
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/sushy/latest/
python-requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[files]
packages =
    sushy

[entry_points]
sushy.resources.system.oems =
    contoso = sushy.resources.oem.fake:get_extension

[compile_catalog]
directory = sushy/locale
domain = sushy

[update_catalog]
domain = sushy
output_dir = sushy/locale
input_file = sushy/locale/sushy.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = sushy/locale/sushy.pot
