[metadata]
name = sushy
summary = Sushy is a small Python library to communicate with Redfish based systems
description_file =
    README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://docs.openstack.org/sushy/latest/
python_requires = >=3.9
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[files]
packages =
    sushy

[entry_points]
sushy.resources.manager.oems =
    dell = sushy.oem.dell.resources.manager.manager:get_extension
sushy.resources.storage_controller.oems =
    dell = sushy.oem.dell.resources.system.storage.controller:get_extension
sushy.resources.system.oems =
    contoso = sushy.resources.oem.fake:get_extension
    dell = sushy.oem.dell.resources.system.system:get_extension
sushy.resources.task.oems =
    dell = sushy.oem.dell.resources.taskservice.task:get_extension

[codespell]
quiet-level = 4
# Words to ignore:
# assertIn: used in unit testing
ignore-words-list = assertIn
skip = AUTHORS,ChangeLog,*.pyc,*.inv,*.svg,*.png,*.sample,./doc/build/*,./api-ref/build/*,./releasenotes/build/*,./api-ref/build/*,./build/*
